# GlobalHealthAtlas

./: CONTRIBUTING.md  LICENSE  QUICKSTART.md  README.md  README.zh.md  README_zh.md  config.yaml  pyproject.toml  requirements.txt  setup.py
Experimental Results/Benchmark_evaluation_results/: Qwen2.5-7Binstruct.csv  Qwen2_5_72binstruct_detailed.csv  Qwen2_5_7Binstruct_detailed.csv  Qwen3_32B_detailed.csv  Qwen3_8B100_detailed.csv  Qwen3_8B_detailed.csv  benchmark_1.csv  benchmark_2.csv  benchmark_3.csv  chatGPT_detailed.csv  claude_sonnet_thinking_detailed.csv  deepseek_distill_qwen_32b_detailed.csv  deepseek_distill_qwen_8b_detailed.csv  deepseek_r1_detailed.csv  deepseek_v3_2_detailed.csv  gemini_3_flash_preview_thinking_detailed.csv  glm_4_7_detailed.csv  grok_3_detailed.csv  kimi_k2_thinking_detailed.csv  qwq_32B_detailed.csv
Experimental Results/Dataset_evaluation_results/: data_leakage_experiment.csv  difficulty_reasoning_experiment.csv  incremental_experiment.csv  mental_tabacco_performance.csv  robustness_experiment.csv  sft_validity_ablation_study.csv  transfer_experiment.csv
Source Code/Public Evaluator/: README_ZH.md  scorer_batch.py  scorer_single.py
Source Code/Public Model/: README.md  README_ZH.md  answer_batch.py  answer_single.py
Source Code/scorer/: README.md  merge_weights.py  scorer_batch.py
data/Benchmark_evaluation_results/: Qwen2.5-72Binstruct.csv
experiments/: __init__.py  experiment_runner.py  result_analyzer.py
scoring/: __init__.py  scorer.py
src/: __init__.py  main.py
src/config/: __init__.py  model_config.py  paths.py  prompts.py
src/core/: __init__.py  batch_processor.py  (+4 more)
training/: README.md  __init__.py  train_lora.sh
(+5 files in other folders)
